[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxbridge"
version = "0.2.0"
description = "Open TTS engine — local, private, expressiveness unlocked. Fork of MIT-licensed Supertonic SDK with open expression support and text normalization."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yu, Yechan", email = "ato@supertone.ai"},
    {name = "Lee, Juheon", email = "juheon@supertone.ai"},
    {name = "Kim, Hyeongju", email = "hyeongju@supertone.ai"},
]
maintainers = [
    {name = "Brimdor", email = "brimdor@users.noreply.github.com"},
]
keywords = [
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "onnx",
    "deep-learning",
    "audio",
    "voice-synthesis",
    "neural-tts",
    "on-device",
    "tts-server",
    "http-server",
    "fastapi",
    "openai-compatible",
    "expression",
    "prosody",
    "text-normalization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # onnxruntime's Python-version coverage shifted in 1.20.0: 1.20.0 is the
    # first release with a Python 3.13 wheel, but it also *dropped* the
    # Python 3.9 wheel. We therefore floor by Python version:
    "onnxruntime>=1.19.0; python_version < '3.13'",
    "onnxruntime>=1.20.0; python_version >= '3.13'",
    "numpy>=1.21.0",
    "soundfile>=0.10.0",
    "huggingface-hub>=0.10.0",
]

[project.optional-dependencies]
playback = [
    "sounddevice>=0.4.0",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
    "starlette>=0.36",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "black>=25.0",
    "ruff>=0.5",
    "build>=1.0.0",
    "twine>=4.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/brimdor/voxbridge"
Repository = "https://github.com/brimdor/voxbridge"
Documentation = "https://github.com/brimdor/voxbridge#readme"
Issues = "https://github.com/brimdor/voxbridge/issues"
"Model Hub" = "https://huggingface.co/Supertone/supertonic-3"

[project.scripts]
voxbridge = "voxbridge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxbridge*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
voxbridge = ["py.typed", "voice_styles/*.json"]

[tool.setuptools.dynamic]
version = {attr = "voxbridge.__version__"}

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"